<resources>
    <string name="app_name">Yo Presto</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">"Password"</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="site_key" translatable="false">6LcevXUUAAAAANFMANOa4rATBc1TLK--uwvCkEfq</string>
    <string name="secret_key" translatable="false">6LcevXUUAAAAAFIior7k3slr4fUyAVgBrjWOUdWV</string>
    <string name="sign_in">LogIn</string>
    <string name="user_hint">User</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="title_activity_capture_dni">CaptureDNIActivity</string>
    <string name="use">Use Transaction</string>
    <string name="use_message">Make DNI capture</string>
    <string name="dni">DNI</string>
    <string name="available_amount">Available amount</string>
    <string name="amount_to_use">Amount to use</string>
    <string name="quota_amount">Quota value</string>
    <string name="write_otp">Write the OTP</string>
    <string name="generate_new_otp">Generate new OTP</string>
    <string name="accept">Accept</string>
    <string name="close_session">Close session</string>
    <string name="use_transaction">Use Transaction</string>
    <string name="more">More</string>
    <string name="information">Information</string>
    <string name="close_session_ask">¡Do you want close session?</string>
    <string name="quota_date">Quota Date</string>
    <string name="loading">Loading</string>
    <string name="progress_dialog">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="quota_must_be_minor_that_amount">Quota must be minor that amount</string>
    <string name="quota_must_be_almost">Quota must be almost $20.000</string>
    <string name="amount_to_use_must_be_almost">Amount to use must be almost $100.000</string>
    <string name="amount_to_use_must_be_minor_that_balance">Amount to use must be minor that balance</string>
    <string name="wrong_otp">Wrong OTP</string>
    <string name="take_picture">Scan Document</string>
    <string name="avalaible_value">Available amount</string>
    <string name="welcome">Welcome</string>
    <string name="avalaible_money">Avalaible money:</string>
    <string name="title_activity_stores" translatable="false">Map</string>
    <string name="next" translatable="false">Next</string>


    <string name="scan_qr_code">Scan QR code</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="title_activity_report">activity_report</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab">activity_tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_report_view">ReportView</string>
    <string name="_0">0</string>
    <string name="title_activity_utilizacion_view">utilizacion_view</string>

</resources>
