<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/fondoutilizacion">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/logoyopresto" />

    <EditText
        android:id="@+id/editTextOTP"
        android:layout_width="100dp"
        android:inputType="numberPassword"
        android:layout_height="" />







    <EditText
        android:id="@+id/editTextQuota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="13dp"
        android:text="@string/amount_to_use"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="146dp"
        android:text="@string/quota_amount"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="163dp"
        android:text="@string/write_otp"
        />

    <TextView
        android:id="@+id/textViewAvailableBalance"
        android:layout_width="114dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"

        tools:text="500.000" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:inputType="number"
         />

    <TextView
        android:id="@+id/textViewGenerateOTP"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/buttonAcceptUse"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="-363dp"
        android:text="@string/generate_new_otp"
        android:textColor="@color/pdlg_color_blue"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/buttonAcceptUse"
        android:layout_width="287dp"
        android:layout_height="30dp"
        android:layout_below="@+id/editTextOTP"
        android:layout_marginStart="3dp"
        android:layout_marginTop="-72dp"
        android:layout_toEndOf="@+id/editTextQuota"
        android:background="@drawable/use_button"
        android:capitalize="none"
        android:text="@string/accept"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textViewDNINumber"
        android:layout_width="113dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/textViewGenerateOTP"
        android:layout_marginStart="-61dp"
        android:layout_marginBottom="82dp"

        android:textAlignment="center"
        android:textColor="#ffffff"
        tools:text="131313131313" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="140dp"
        android:text="@string/quota_date" />

    <EditText
        android:id="@+id/editTextQuotaDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:inputType="date"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="31dp"
        android:text="@string/avalaible_value"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txtSaldo"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="412dp"
        android:text="$0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"

        tools:text="$0" />
</RelativeLayout>