<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoutilizacion"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="82dp"
        android:layout_height="80dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoyopresto" />

    <EditText
        android:id="@+id/editTextOTP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextQuota"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="140dp"
        android:text="@string/amount_to_use"
        app:layout_constraintEnd_toStartOf="@+id/editTextAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="146dp"
        android:text="@string/quota_amount"
        app:layout_constraintEnd_toStartOf="@+id/editTextQuota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="163dp"
        android:text="@string/write_otp"
        app:layout_constraintEnd_toStartOf="@+id/editTextOTP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textViewAvailableBalance"
        android:layout_width="114dp"
        android:layout_height="0dp"
        android:layout_marginBottom="87dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAcceptUse"
        tools:text="500.000" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="178dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textViewGenerateOTP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textViewDNINumber" />

    <TextView
        android:id="@+id/textViewGenerateOTP"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="19dp"
        android:text="@string/generate_new_otp"
        android:textColor="@color/pdlg_color_blue"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonAcceptUse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <Button
        android:id="@+id/buttonAcceptUse"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/use_button"
        android:capitalize="none"
        android:text="@string/accept"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textViewAvailableBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenerateOTP" />

    <TextView
        android:id="@+id/textViewDNINumber"
        android:layout_width="113dp"
        android:layout_height="20dp"
        android:layout_marginBottom="81dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/editTextAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="131313131313" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="141dp"
        android:text="@string/quota_date"
        app:layout_constraintEnd_toStartOf="@+id/editTextQuotaDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextQuotaDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="20dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="32dp"
        android:text="@string/avalaible_value"
        android:textAlignment="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/textViewDNINumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSaldo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="$0"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="$0" />
</android.support.constraint.ConstraintLayout>